# openapi-examples

fastapi/: docker-compose.yaml  openapi.yaml  setup.cfg
fastapi/.openapi-generator/: FILES
fastapi/src/addressbook/: main.py  security_api.py
fastapi/src/addressbook/apis/: addressbook_api.py
fastapi/src/addressbook/models/: addressbook.py  addressbook_post_request.py
fastapi/tests/: conftest.py  test_addressbook_api.py
rust/: Cargo.toml  README.md
rust/.openapi-generator/: FILES
rust/api/: openapi.yaml
rust/docs/: Addressbook.md  AddressbookPostRequest.md  addressbook_api.md
rust/examples/client/: main.rs
rust/examples/server/: main.rs  server.rs
rust/src/: lib.rs  models.rs
rust/src/client/: mod.rs
rust/src/server/: mod.rs
