[metadata]
name = addressbook
version = 1.0
description = An example API with more than one resource
long_description = file: README.md
keywords = OpenAPI Example person and addressbook API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
